--- a/index.html
+++ b/index.html
@@ -328,6 +328,76 @@
     </section>
 
     <!---------- Our Youtube Videos  ----------->
+    <section class="section-video">
+      <h1>我們的 YouTube 影片</h1>
+      <div class="container">
+        <div class="main-video">
+          <div class="video">
+            <iframe
+              src="https://www.youtube.com/embed/VF0NtS1_uG8?si=RZknnBTKuE9jvI9u"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              allowfullscreen
+            ></iframe>
+            <h3 class="title"></h3>
+            <a
+              class="youtube-hero-btn"
+              href="https://www.youtube.com/channel/UCnxzzziyUQF2QUn3OG0KXCg"
+              target="_blank"
+              ><span>看更多影片</span></a
+            >
+          </div>
+        </div>
+
+        <div class="video-list">
+          <div class="vid active">
+            <video
+              src="https://www.youtube.com/embed/VF0NtS1_uG8?si=RZknnBTKuE9jvI9u"
+              title="YouTube video player"
+              frameborder="0"
+              allowfullscreen
+            ></video>
+            <img src="images/Thumbnail 1.jpg" alt="" />
+            <h3 class="title">開箱貝殼在首都的家和媽媽做的傳統牛肉五指麵</h3>
+          </div>
+          <div class="vid">
+            <video
+              src="https://www.youtube.com/embed/rSz6be0K4Bw?si=G1lMZF5YMy49TDns"
+              title="YouTube video player"
+              frameborder="0"
+              allowfullscreen
+            ></video>
+            <img src="images/Thumbnail 2.webp" alt="" />
+            <h3 class="title">沒有婚紗和宴會廳～我們的夢想實現了！</h3>
+          </div>
+          <div class="vid">
+            <video
+              src="https://www.youtube.com/embed/OSVXmZmE-b8?si=MMS8jN_5J8TsCpe_"
+              title="YouTube video player"
+              frameborder="0"
+              allowfullscreen
+            ></video>
+            <img src="images/Thumbnail 3.jpg" alt="" />
+            <h3 class="title">
+              世界上吃肉最多的吉爾吉斯人. <br />中亞人到底有會吃？
+            </h3>
+          </div>
+          <div class="vid">
+            <video
+              src="https://www.youtube.com/embed/q8idwVDm74s?si=b-eTeT4qU4MMZO8O"
+              title="YouTube video player"
+              frameborder="0"
+              allowfullscreen
+            ></video>
+            <img src="images/Thumbnail 4.webp" alt="" />
+            <h3 class="title">
+              台灣女孩嫁到吉爾吉斯跟超猛婆婆學料理～<br />五個道地美食
+            </h3>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!---------- Why Choose Us  ----------->
     <section class="why-us">
