--- a/kyrgyzs-hospitality.html
+++ b/kyrgyzs-hospitality.html
@@ -65,7 +65,7 @@
         </div>
         <i class="fa fa-bars" onclick="showMenu()"></i>
       </nav>
-      <h1>留下難忘的時刻</h1>
+      <h1>體驗當地熱情好客</h1>
     </section>
 
     <!---------- Tour gallery ----------->
@@ -202,13 +202,13 @@
             </div>
           </div>
 
-          <div class="tph-contact">
+          <div class="hospitality-tph-contact">
             <div class="thp-price">
               <p></p>
               <span class="price"></span>
               <p></p>
             </div>
-            <div class="info-item-btn">
+            <div class="hos-item-btn">
               <p>Book or any Qiestion ?</p>
               <a class="item-hero-btn" href="contact.html"
                 ><span>Contuct Us!</span></a
