--- a/about-us.html
+++ b/about-us.html
@@ -59,9 +59,14 @@
       <div class="timeline-container timeline-left-container">
         <img class="kg-img" src="kyrgyzstan-img-ready/kg-ornament.png" />
         <div class="timeline-text-box">
-          <h2>Ruby</h2>
+          <h2>嚕比的興趣</h2>
           <small></small>
-          <p>Ruby對西藏, 大山, 少數民族文化一直很感興趣,</p>
+          <p>
+            嚕比對大山，少數民族文化一直很感興趣，
+            大學暑假曾到台東太麻里當志工，教排灣族孩子英文，
+            造訪過台灣的嘉明湖，雲南雨崩村，泰北凱倫族部落， 越南西北沙巴小鎮，
+            瑞士馬特洪峰， 收藏一書櫃的西藏書籍。
+          </p>
 
           <span class="timeline-left-container-arrow"></span>
         </div>
@@ -77,12 +82,12 @@
       <div class="timeline-container timeline-right-container">
         <img class="kg-img" src="kyrgyzstan-img-ready/kg-ornament.png" />
         <div class="timeline-text-box">
-          <h2>認識Bek</h2>
+          <h2>認識貝殼</h2>
           <small>2018</small>
           <p>
-            在上海認識Bek後, 才有機會拜訪吉爾吉斯這個陌生國家, 第一次騎馬,
-            住蒙古包, 登山泡溫泉,好奇寶寶獲得全新的體驗。
-            Bek出生在離海最遠的國家, 從小喜歡游泳且夢想住在熱帶島嶼
+            在上海認識貝殼後才有機會拜訪中亞這個陌生國家，
+            第一次騎馬，住蒙古包， 登山泡溫泉，好奇寶寶獲得全新的體驗。
+            貝殼出生在離海最遠的國家， 從小喜歡游泳且夢想住在熱帶島嶼。
           </p>
 
           <span class="timeline-right-container-arrow"></span>
@@ -102,8 +107,8 @@
           <h2>貝殼孤單困在泰國</h2>
           <small>2020</small>
           <p>
-            covid 來襲, 貝殼孤單困在異地,一週的泰國行變成兩年半, 好像被世界丟下,
-            重新思考生活的意義。
+            covid
+            來襲，貝殼孤單困在異地，一週的泰國行變成兩年半，好像被世界丟下，重新思考生活的意義。
           </p>
 
           <span class="timeline-left-container-arrow"></span>
@@ -122,7 +127,10 @@
         <div class="timeline-text-box">
           <h2>求婚</h2>
           <small>2021</small>
-          <p>分開一年後Ruby來到泰國, Bek在世界攀岩勝地Railay 的懸崖邊求婚,</p>
+          <p>
+            分開一年後嚕比千辛萬苦準備文件來到泰國，貝殼在世界攀岩勝地Railay
+            的懸崖邊求婚，似乎只能答應這樁婚事！
+          </p>
 
           <span class="timeline-right-container-arrow"></span>
         </div>
@@ -141,8 +149,7 @@
           <h2>小島生活</h2>
           <small>2021-2022</small>
           <p>
-            似乎只能答應這樁婚事！ 我們開始拍攝youtube, 從零自學摸索。
-            定居泰國小島一年讓我們找到了最棒最健康的生活方式！
+            我們開始拍攝youtube，從零自學摸索。定居泰國小島一年讓我們找到了最棒最健康的生活方式！
           </p>
 
           <span class="timeline-left-container-arrow"></span>
@@ -162,8 +169,7 @@
           <h2>結婚</h2>
           <small>2022</small>
           <p>
-            世界恢復運轉, 我們回到吉爾吉斯, 決定不跟隨大家在首都高級的飯店宴客,
-            選擇回到貝殼出生的鄉下, 辦一場辛苦卻回憶滿滿的傳統婚禮！
+            世界恢復運轉，台灣仍未開放，我們回到吉爾吉斯結婚，決定不在首都高級的飯店宴客，選擇排除萬難回到貝殼出生的鄉下，辦一場回憶滿滿的傳統婚禮！
           </p>
 
           <span class="timeline-right-container-arrow"></span>
@@ -183,8 +189,8 @@
           <h2>推廣吉爾吉斯</h2>
           <small>2023 </small>
           <p>
-            差點放棄youtube回到各自工作崗位, 發現好友Navat
-            多年來和我們都在推廣吉爾吉斯, 我們成為夥伴共同創立吉爾吉斯旅行社。
+            差點放棄youtube回到各自工作崗位，發現好友Navat
+            多年來和我們都在推廣吉爾吉斯，是大家都超喜歡的熱情導遊，我們成為夥伴共同創立吉爾吉斯旅行社。
           </p>
 
           <span class="timeline-left-container-arrow"></span>
@@ -201,10 +207,11 @@
       <div class="timeline-container timeline-right-container">
         <img class="kg-img" src="kyrgyzstan-img-ready/kg-ornament.png" />
         <div class="timeline-text-box">
-          <h2>感謝</h2>
+          <h2>表達感謝</h2>
           <small>2023</small>
           <p>
-            第一年接待三組來自港台的客人, 對於你們的信任和支持我們無比感激！
+            第一年接待三組來自港台的客人，對於你們的信任和支持我們無比感激！
+            沒想到我們創造並堅持著喜歡的工作！
           </p>
 
           <span class="timeline-right-container-arrow"></span>
@@ -221,12 +228,11 @@
       <div class="timeline-container timeline-left-container">
         <img class="kg-img" src="kyrgyzstan-img-ready/kg-ornament.png" />
         <div class="timeline-text-box">
-          <h2>Bek</h2>
+          <h2>貝殼想說的話</h2>
           <small></small>
           <p>
-            小時候發生兩次意外, 很長時間待在醫院的我發現生活是很短暫的,
-            我們在地球上也不是永遠, 我很珍惜活下來後探索世界的每一個時刻。Don’t
-            stop dreaming. 不要停止夢想, 用力追尋, 我很感謝此刻我活在夢想裡！
+            小時候發生兩次意外，很長時間待在醫院的我發現生活是很短暫的，我們在地球上也不是永遠，我很珍惜活下來後探索世界的每一個時刻。Don’t
+            stop dreaming. 不要停止夢想， 用力追尋， 我很感謝此刻我活在夢想裡！
           </p>
 
           <span class="timeline-left-container-arrow"></span>
