--- a/seven-days-tour.html
+++ b/seven-days-tour.html
@@ -63,7 +63,7 @@
         </div>
         <i class="fa fa-bars" onclick="showMenu()"></i>
       </nav>
-      <h1>留下難忘的時刻</h1>
+      <h1>7 天夏 經典行程</h1>
     </section>
 
     <!---------- Tour gallery ----------->
@@ -393,7 +393,7 @@
           <div class="tph-contact">
             <div class="thp-price">
               <p>from</p>
-              <span class="price">$1.888</span>
+              <span class="price">$1.320 </span>
               <p>per person</p>
             </div>
             <div class="info-item-btn">
@@ -410,6 +410,15 @@
 
       <div class="description-highlights-map">
         <div class="description-highlights">
+          <div class="description">
+            <h2>今年夏天拼團日期, 每個月開一團, 一個人也可以參加！</h2>
+            <p>
+              &nbsp; &nbsp; 6/17-6/23 七天&nbsp; &nbsp; &nbsp; &nbsp; 7/22 -
+              7/29 八天&nbsp; &nbsp; &nbsp; &nbsp; 8/4 - 8/10 七天&nbsp; &nbsp;
+              &nbsp; &nbsp; 9/9-9/15 七天
+            </p>
+            <p class="per-about-p">✅七月和八月行程有加入剛出爐的遊牧節慶</p>
+          </div>
           <div class="description">
             <h2>Description</h2>
             <p>
@@ -454,7 +463,12 @@
             class="google-map-link"
             target="_blank"
             href="https://www.google.com/maps/dir/Bishkek,+Kyrgyzstan/Karakol,+Kyrgyzstan/Altyn-Arashan,+Altynarasan,+Kyrgyzstan/Jeti+Oguz,+Kyrgyzstan/Fairytale+canyon+%22Skazka%22,+5943%2BJP4,+Tosor,+Kyrgyzstan/Tash+Rabat+yurt+camps,+Kyrgyzstan/Chon-Kemin,+Kyrgyzstan/Bishkek,+Kyrgyzstan/@41.9169589,75.269047,8z/data=!3m1!4b1!4m50!4m49!1m5!1m1!1s0x389eb7dc91b3c881:0x492ebaf57cdee27d!2m2!1d74.5697617!2d42.8746212!1m5!1m1!1s0x38865b91e1f04c0b:0xeb5bfe3900e7ecfa!2m2!1d78.3955986!2d42.4782102!1m5!1m1!1s0x38864b7ff6492d79:0x173f0efe7295042!2m2!1d78.606668!2d42.3815729!1m5!1m1!1s0x3886660da65eac6d:0xfabe6ff519ab0d64!2m2!1d78.219132!2d42.4260911!1m5!1m1!1s0x3885980c503f6a29:0xf269c7291e5d8f4a!2m2!1d77.3543135!2d42.1565067!1m5!1m1!1s0x3891236316347521:0x3522d1ecf6710f04!2m2!1d75.2746745!2d40.8685112!1m5!1m1!1s0x389b6996fb17fff3:0x1495f6a9fa060fee!2m2!1d76.1277866!2d42.7441757!1m5!1m1!1s0x389eb7dc91b3c881:0x492ebaf57cdee27d!2m2!1d74.5697617!2d42.8746212!3e0?hl=en&entry=ttu"
-            >Open Google Map</a
+            ><button
+              href="https://www.google.com/maps/dir/Bishkek,+Kyrgyzstan/Karakol,+Kyrgyzstan/Altyn-Arashan,+Altynarasan,+Kyrgyzstan/Jeti+Oguz,+Kyrgyzstan/Fairytale+canyon+%22Skazka%22,+5943%2BJP4,+Tosor,+Kyrgyzstan/Tash+Rabat+yurt+camps,+Kyrgyzstan/Chon-Kemin,+Kyrgyzstan/Bishkek,+Kyrgyzstan/@41.9169589,75.269047,8z/data=!3m1!4b1!4m50!4m49!1m5!1m1!1s0x389eb7dc91b3c881:0x492ebaf57cdee27d!2m2!1d74.5697617!2d42.8746212!1m5!1m1!1s0x38865b91e1f04c0b:0xeb5bfe3900e7ecfa!2m2!1d78.3955986!2d42.4782102!1m5!1m1!1s0x38864b7ff6492d79:0x173f0efe7295042!2m2!1d78.606668!2d42.3815729!1m5!1m1!1s0x3886660da65eac6d:0xfabe6ff519ab0d64!2m2!1d78.219132!2d42.4260911!1m5!1m1!1s0x3885980c503f6a29:0xf269c7291e5d8f4a!2m2!1d77.3543135!2d42.1565067!1m5!1m1!1s0x3891236316347521:0x3522d1ecf6710f04!2m2!1d75.2746745!2d40.8685112!1m5!1m1!1s0x389b6996fb17fff3:0x1495f6a9fa060fee!2m2!1d76.1277866!2d42.7441757!1m5!1m1!1s0x389eb7dc91b3c881:0x492ebaf57cdee27d!2m2!1d74.5697617!2d42.8746212!3e0?hl=en&entry=ttu"
+              class="google-btn"
+            >
+              Open Goole Map
+            </button></a
           >
         </div>
       </div>
@@ -462,7 +476,7 @@
       <!----------itinerary ----------->
 
       <section class="itinerary">
-        <h1 class="itinerary-title">7 Dyas Best Of Kyrgyzstan</h1>
+        <h1 class="itinerary-title">7 Days Best Of Kyrgyzstan</h1>
         <div class="itinerary-row">
           <div class="itinerary-day-cal">
             <div class="itinerary-question">
@@ -862,26 +876,59 @@
 
         <div class="important-info-container">
           <div class="important-info-col">
-            <h2>Important Information</h2>
-            <p>
-              Experience Hiroshima's rich history and profound resilience by
-              exploring the sacred Miyajima Island, home to the iconic
-              Itsukushima Shrine and the torii gate. Discover the Buddhist
-              architecture of Daishoin Temple, wander along Machiya Street or
-              Omotesando Street.
-            </p>
+            <h2>預訂注意事項</h2>
+            <ol>
+              <li>訂金金額：每人團費30%</li>
+              <li>訂金繳交期限：確認訂單送出表單5天內</li>
+              <li>請申請到簽證後再購買機票（吉爾吉斯簽證有不確定性）</li>
+              <li>
+                請確認護照有效期限、必需於本行程回國日算起，有六個月以上之效期。
+              </li>
+              <li>
+                本行程可延長住宿天數，代訂BIshkek Freedom Hotel 一晚62美金
+              </li>
+              <li>
+                小費：當地導遊司機服務費<br /> 旅客每人一日十美金  <br />
+                七日七十美金 <br />
+                八日八十美金
+              </li>
+              <li>
+                拼團會協助同性別安排雙人房，<br />
+                如需要單人房或是無法湊雙數安排，<br />
+                單人房每晚加價25 美金
+              </li>
+              <li>
+                在首都第一天我們會請換錢的人到飯店 <br />
+                為您服務, 請準備美金換當地貨幣
+              </li>
+              <li>
+                我們有安排到當地人家用餐，<br />
+                如喜歡他們的服務， 歡迎提供小費 <br />
+              </li>
+              <li>
+                行程有時會因航班、食宿安排、天候、<br />
+                交通…等因素而更動次序，敬請見諒。
+              </li>
+              <li>
+                如遇不可抗拒情況，本公司保有變更交通工具或旅行方式之權利。
+              </li>
+            </ol>
           </div>
         </div>
 
         <div class="cancellation-policy-container">
           <div class="cancellation-policy">
-            <h2>Cancellation Policy</h2>
+            <h2>付款及取消政策</h2>
             <p>
-              Experience Hiroshima's rich history and profound resilience by
-              exploring the sacred Miyajima Island, home to the iconic
-              Itsukushima Shrine and the torii gate. Discover the Buddhist
-              architecture of Daishoin Temple, wander along Machiya Street or
-              Omotesando Street.
+              報名請支付300美金 訂金 <br />
+              到達當地第一天再支付導遊美金尾款 <br />
+              報名後因故不能參加活動時，<br />
+              請儘早告知；若於出發前21至30天取消訂單， <br />
+              需收取旅遊費用全額10%手續費；於出發前11至20天取消訂單， <br />
+              需收取旅遊費用全額20%手續費； 於出發前4至10天取消訂單，<br />
+              需收取旅遊費用全額30%手續費； 於出發前1天至3天取消訂單，<br />
+              需收取旅遊費用全額70%手續費； 於出發當天取消訂單、集合逾時、<br />
+              因個人因素私自脫隊、及未通知不參加者恕不退費。
             </p>
           </div>
         </div>
@@ -914,7 +961,7 @@
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
-                    <i class="fa fa-star-o"></i>
+                    <i class="fa fa-star"></i>
                   </div>
                   <p class="testimonial-description">
                     “ Time flies and it is hard to believe it is time to say
@@ -944,7 +991,7 @@
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
-                    <i class="fa fa-star-o"></i>
+                    <i class="fa fa-star"></i>
                   </div>
                   <p class="testimonial-description">
                     第一次看到你們然後訂閱你們就是因為吉爾吉斯，一個我以前只在地理課認識到的國家，如果沒有看到你們的影片，可能就真的錯過目睹人間淨土的機會了。
@@ -970,7 +1017,7 @@
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
-                    <i class="fa fa-star-o"></i>
+                    <i class="fa fa-star"></i>
                   </div>
                   <p class="testimonial-description">
                     “ Thank you Ruby by introducing Navat n Tendik to us! We had
@@ -1002,7 +1049,7 @@
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
-                    <i class="fa fa-star-o"></i>
+                    <i class="fa fa-star"></i>
                   </div>
                   <p class="testimonial-description">
                     “ We are especially grateful for your family’s hospitality
