--- a/visa.html
+++ b/visa.html
@@ -105,10 +105,10 @@
         </div>
         <div class="answer">
           <p>
-            參加團我們可以代辦簽證，一人60美金，繳交訂金一起支付
-            申請簽證需要一個月時間, 建議拿到簽證後再買機票, 吉爾吉斯簽證複雜,
-            我們會盡力辦理, 如提早買到便宜機票建議買能退票的較保險。
-            A簽證效期是一個月, 從出發吉爾吉斯那天開始算起！
+            參加團我們可以代辦簽證，一人60美金，繳交訂金一起支付，
+            申請簽證需要一個月時間，建議拿到簽證後再買機票，
+            吉爾吉斯簽證複雜，我們會盡力辦理，如提早買到便宜機票建議買能退票的較保險。
+            簽證效期是一個月，從出發吉爾吉斯那天開始算起！
           </p>
         </div>
       </div>
@@ -128,9 +128,8 @@
         </div>
         <div class="answer">
           <p>
-            可以！單純代辦簽證100% 通過是一人280 美金, 約10個工作天,
-            也可自行線上辦理電子簽證, 台灣護照有70%被拒簽可能，拒簽我們無法幫忙,
-            一年後才可再辦理）
+            可以！單純代辦簽證100% 通過是一人280
+            美金，約10個工作天，也可自行線上辦理電子簽證，台灣護照有70%被拒簽可能，拒簽我們無法幫忙，一年後才可再辦理。
           </p>
         </div>
       </div>
