--- a/blog-article-2.html
+++ b/blog-article-2.html
@@ -65,50 +65,47 @@
             <div>
               <h2></h2>
               <p>
-                自助旅行30多個國家的我～會說如果我還年輕,滿腔熱血？<br />
-                也有充足的旅遊時間去比手畫腳, 沒有太高預算,
-                有耐心講價按翻譯機,<br />
-                願意接受各種未知挑戰,<br />
-                那我會說只要你願意～來吉爾吉斯當然可以自助旅行！<br />
-                來吉爾吉斯旅行最主要是造訪大自然景點, 可以選擇自己租車開過去,<br />
-                這不是簡單的方法, 並不推薦！ 以下是我們建議跟當地團的原因<br />
+                自助旅行30多個國家的嚕比， 會說如果我還年輕,滿腔熱血？
+                也有充足的旅遊時間去比手畫腳， 沒有太高預算，
+                有耐心講價按翻譯機,願意接受各種未知挑戰，
+                那我會說只要你願意～來吉爾吉斯當然可以自助旅行！
               </p>
             </div>
 
             <div>
               <h3>1 語言隔閡</h3>
               <p>
-                主要語言是吉語和俄語, 即使在首都講英文也不通, <br />
-                比手畫腳很難解決旅行上的問題
+                主要語言是吉語和俄語，即使在首都講英文也不通，<br />
+                比手畫腳很難解決旅行上的問題。
               </p>
             </div>
 
             <div>
               <h3>2 路況不佳</h3>
               <p>
-                只要往大山方向前進, 除了貫穿南北的路, <br />
-                基本上都是石頭路, 路程遙遠方向也很複雜 <br />
-                建議請專業的司機, 旅行起來較安心
+                只要往大山方向前進， 除了貫穿南北的路，<br />
+                基本上都是石頭路，路程遙遠方向也很複雜，<br />
+                建議請專業的司機, 旅行起來較安心。
               </p>
             </div>
 
             <div>
               <h3>3 健行安全</h3>
               <p>
-                溫差大且來到新的環境 <br />
-                建議請嚮導可以盡興玩也能順便了解當地文化
+                溫差大且來到新的環境，<br />
+                建議請嚮導可以盡興玩也能順便了解當地文化，
               </p>
             </div>
 
             <div>
-              <h3>4 旅行資訊少, 資源不足</h3>
+              <h3>4 旅行資訊少， 資源不足</h3>
               <p>
-                這點是我覺得自助旅行很困難的原因之一 <br />
-                從甲地到乙地 <br />
-                可能有數十種方式 <br />
-                但每個當地人說法不同（比手畫腳）<br />
-                常常溝通就需要花費很多時間 <br />
-                建議和朋友組一個小團來玩
+                這點是我覺得自助旅行很困難的原因之一，<br />
+                從甲地到乙地，<br />
+                可能有數十種方式，
+                <br />但每個當地人說法不同（比手畫腳），<br />
+                常常溝通就需要花費很多時間，<br />
+                建議和朋友組一個小團來玩。
               </p>
             </div>
           </div>
