--- a/question-answers.html
+++ b/question-answers.html
@@ -70,10 +70,10 @@
         </div>
         <div class="answer">
           <p>
-            今年6-9月每個月都有開團, 拼團一個人也可以參加,
-            拼團最終費用以報名人數決定, 旅行也可以認識新朋友！
-            包團兩人以上可報名，能自行決定日期, 推薦七天經典行程,
-            行程可依客人喜好作微調。 請私訊我們討論細節, 再提供報價。
+            今年6-9月每個月都有開團，拼團一個人也可以參加，
+            拼團最終費用以報名人數決定。 旅行也可以認識新朋友！
+            包團兩人以上可報名，能自行決定日期，推薦七天經典行程，
+            行程可依客人喜好作微調。 請私訊我們討論細節，再提供報價。
           </p>
         </div>
       </div>
@@ -93,10 +93,8 @@
         </div>
         <div class="answer">
           <p>
-            四季分明的吉爾吉斯每個月份能體會不同的季節變化
-            第一次推薦大家6-9月造訪 夏天山谷一片綠油油,
-            5-25度的高山氣溫也相對舒適 10月開始秋天可以賞楓騎馬
-            冬天也有滑雪行程, 比歐美日本便宜很多唷！
+            四季分明的吉爾吉斯，每個月份能體會不同的季節變化。第一次推薦大家6-9月造訪，夏天山谷一片綠油油，5-25度的高山氣溫也相對舒適。
+            10月開始秋天可以賞楓騎馬，冬天也有滑雪行程，比歐美日本便宜很多唷！
           </p>
         </div>
       </div>
@@ -117,8 +115,7 @@
         </div>
         <div class="answer">
           <p>
-            夏天是最適合旅行吉爾吉斯 的季節， 山上晚上溫差很大,
-            保暖的帽子襪子和吸濕排汗的衣服都建議攜帶。
+            夏天是最適合旅行吉爾吉斯的季節，山上晚上溫差很大，保暖的帽子襪子和吸濕排汗的衣服都建議攜帶。
           </p>
         </div>
       </div>
@@ -138,8 +135,8 @@
         </div>
         <div class="answer">
           <p>
-            來吉爾吉斯需要有一雙好走的鞋, 每次徒步約2-3小時, 一般等級！
-            建議一個月前可以練習快走, 小小鍛鍊一下體能！
+            來吉爾吉斯需要有一雙好走的鞋，每次徒步約2-3小時， 一般等級，
+            建議一個月前可以練習快走，小小鍛鍊一下體能！
           </p>
         </div>
       </div>
@@ -159,10 +156,10 @@
         </div>
         <div class="answer">
           <p>
-            參加團我們可以代辦簽證，一人60美金，繳交訂金一起支付
-            申請簽證需要一個月時間, 建議拿到簽證後再買機票, 吉爾吉斯簽證複雜,
-            我們會盡力辦理, 如提早買到便宜機票建議買能退票的較保險。
-            A簽證效期是一個月, 從出發吉爾吉斯那天開始算起！
+            參加團我們可以代辦簽證，一人60美金，繳交訂金一起支付，
+            申請簽證需要一個月時間，建議拿到簽證後再買機票，
+            吉爾吉斯簽證複雜，我們會盡力辦理，如提早買到便宜機票建議買能退票的較保險。
+            簽證效期是一個月，從出發吉爾吉斯那天開始算起！
           </p>
         </div>
       </div>
@@ -182,9 +179,8 @@
         </div>
         <div class="answer">
           <p>
-            可以！單純代辦簽證100% 通過是一人280 美金, 約10個工作天,
-            也可自行線上辦理電子簽證, 台灣護照有70%被拒簽可能，拒簽我們無法幫忙,
-            一年後才可再辦理）
+            可以！單純代辦簽證100% 通過是一人280
+            美金，約10個工作天，也可自行線上辦理電子簽證，台灣護照有70%被拒簽可能，拒簽我們無法幫忙，一年後才可再辦理。
           </p>
         </div>
       </div>
@@ -203,8 +199,7 @@
         </div>
         <div class="answer">
           <p>
-            航班推薦轉機土耳其和杜拜轉機, 不過今年開始新增了中國和韓國轉機的選項
-            建議多看看唷！ 機票請自行購買或請台灣旅行社代買
+            航班推薦轉機土耳其和杜拜轉機，不過今年開始新增了中國和韓國轉機的選項，建議多看看唷，機票請自行購買或請台灣旅行社代買。
           </p>
         </div>
       </div>
@@ -224,20 +219,17 @@
         </div>
         <div class="answer">
           <p>
-            吉爾吉斯是台灣的五倍大 山路迂迴, 身體需要適應,
-            也更適合用慢步調來感受大自然
-            走馬看花五個中亞國家踩點打卡不是我們的旅行風格
-            考慮到大家的假期安排和航班來回 經典七天行程不算長 但是滿滿充實的行程
-            可以讓旅客感受到道地遊牧生活 鍛鍊體力爬山騎馬之外也能好好放鬆
+            吉爾吉斯是台灣的五倍大，山路迂迴，身體需要適應，也更適合用慢步調來感受大自然
+            。
+            走馬看花五個中亞國家踩點打卡不是我們的旅行風格，考慮到大家的假期安排和航班來回，經典七天行程不算長
+            ，但是滿滿充實的行程，
+            可以讓旅客感受到道地遊牧生活，鍛鍊體力爬山騎馬之外，也能好好放鬆。
           </p>
         </div>
       </div>
       <div class="faq">
         <div class="question">
-          <h3>
-            提前抵達或希望行程結束後想要多留幾天,自己在市區走走,
-            可以代訂飯店嗎？
-          </h3>
+          <h3>提前抵達或希望行程結束後想要多留幾天，可以代訂飯店嗎？</h3>
 
           <svg width="15" height="10" viewBox="0 0 42 25">
             <path
@@ -250,8 +242,9 @@
         </div>
         <div class="answer">
           <p>
-            本行程可延長住宿天數， 代訂Bishkek Freedom Hotel
-            一晚一間房含早餐62美金
+            本行程可延長住宿天數，代訂Bishkek Freedom Hotel
+            一晚一間房含早餐62美金或是也推薦大家可以在伊賽克湖度假幾天,
+            夏天游泳超棒的喔！
           </p>
         </div>
       </div>
@@ -270,8 +263,8 @@
         </div>
         <div class="answer">
           <p>
-            經典七天行程中一次騎馬在Chon Kemin約2-3 小時
-            如還想體驗騎馬可以在song kul 頌湖， 一小時15 美金的費用
+            經典七天行程中一次騎馬在Chon Kemin約2-3
+            小時，如還想體驗騎馬可以在Song kul 頌湖，一小時15 美金的費用。
           </p>
         </div>
       </div>
@@ -290,8 +283,7 @@
         </div>
         <div class="answer">
           <p>
-            可以幫大家代購網卡, 七天當中約有2-3天在高山完全沒有訊號,
-            讓自己沈靜在大自然裡休息,徹底放空, 享受過程！
+            七天當中約有2-3天在高山完全沒有訊號，讓自己沈靜在大自然裡休息，徹底放空，享受過程！另外可以幫大家代購網卡，一張七天3美元。
           </p>
         </div>
       </div>
@@ -311,10 +303,9 @@
         </div>
         <div class="answer">
           <p>
-            兩個月前會確定是否開團, 1填寫報名表格 2 繳交訂金 3 提供護照辦理簽證
-            訂金金額：300美金 / 每人 Paypal 線上刷卡
-            （我們的旅行社在吉爾吉斯,無法接受台幣轉帳）
-            餘款請第一天到當地支付美金現金給導遊
+            兩個月前會確定是否開團， 1填寫報名表格 2 繳交訂金 3
+            提供護照辦理簽證，訂金金額：300美金，每人 Paypal 線上刷卡
+            （我們的旅行社在吉爾吉斯，無法接受台幣轉帳。餘款請第一天到當地支付美金現金給導遊
           </p>
         </div>
       </div>
