17 Apr 17pm new update
17 Apr 17pm new update

--- a/blog.html
+++ b/blog.html
@@ -73,7 +73,7 @@
               <p class="about-blog-p">12 april 2024</p>
               <img src="blog/murmur.png" alt="" />
             </div>
-            <h3>嚕比的murmur</h3>
+            <h3>吸引力法則（嚕比）</h3>
             <p></p>
           </a>
         </div>
