--- a/kyrgyzs-hospitality.html
+++ b/kyrgyzs-hospitality.html
@@ -65,7 +65,7 @@
         </div>
         <i class="fa fa-bars" onclick="showMenu()"></i>
       </nav>
-      <h1>體驗當地熱情好客</h1>
+      <h1>體驗當地美食</h1>
     </section>
 
     <!---------- Tour gallery ----------->
