--- a/tours.html
+++ b/tours.html
@@ -63,7 +63,12 @@
           <a href="seven-days-tour.html">
             <div class="tour-col">
               <img src="images/7-days-tour.jpg" alt="" />
-              <h4>7 天夏 經典行程</h4>
+              <h4>
+                7 天夏 經典行程 &nbsp; &nbsp; &nbsp; &nbsp;<span
+                  class="tours-date"
+                  >拼團日期</span
+                >
+              </h4>
               <div class="tour-days">
                 <i class="fa fa-location-arrow"></i>
                 <p>7 Days Trip</p>
@@ -99,7 +104,7 @@
           <a href="kyrgyzs-hospitality.html">
             <div class="tour-col">
               <img src="images/cooking-oneday-tour.jpg" alt="" />
-              <h4>Experience Local hospitality</h4>
+              <h4>體驗當地美食</h4>
               <div class="tour-days">
                 <i class="fa fa-location-arrow"></i>
                 <p>1 Days Trip</p>
