--- a/index.html
+++ b/index.html
@@ -83,9 +83,11 @@
           <h1>我們的故事</h1>
           <p>
             你將在故事中了解貝殼和嚕比在上海相遇的契機，因熱愛冒險彼此吸引。
-            2020年新冠疫情爆發意外地被困在泰國。他們沒有因此氣餒，反而利用這段時間磨出了一家旅行社的夢想，希望向大家介紹吉爾吉斯未被開發的大自然美景。
-            在貝殼嚕比的堅定決心以及朋友 Navat 的支持下，他們將夢想化為現實。
-            從2023開始，他們的吉爾吉斯旅行社邀請旅行者探索吉爾吉斯人迷人的景觀和豐富的文化。
+            2020年新冠疫情爆發意外地被困在泰國。他們沒有因此氣餒， <br />
+            反而利用這段時間磨出了一家旅行社的夢想，<br />
+            希望向大家介紹吉爾吉斯未被開發的大自然美景。<br />
+            在貝殼嚕比的堅定決心以及朋友 Navat 的支持下，他們將夢想化為現實。<br />
+            從2023開始，他們的吉爾吉斯旅行社邀請旅行者探索吉爾吉斯人迷人的景觀和豐富的文化。<br />
             加入我們， 在吉爾吉斯展開一段難忘的冒險旅程！
           </p>
 
@@ -149,7 +151,7 @@
           <a href="kyrgyzs-hospitality.html">
             <div class="tour-col">
               <img src="images/cooking-oneday-tour.jpg" alt="" />
-              <h4>Experience Local hospitality</h4>
+              <h4>體驗當地美食</h4>
               <div class="tour-days">
                 <i class="fa fa-location-arrow"></i>
                 <p>1 Days Trip</p>
@@ -191,7 +193,7 @@
               <p class="about-blog-p">12 april 2024</p>
               <img src="blog/murmur.png" alt="" />
             </div>
-            <h3>嚕比的murmur</h3>
+            <h3>吸引力法則（嚕比）</h3>
             <p></p>
           </a>
         </div>
