--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
     <section class="testimonial">
       <div class="slider-container swiper">
         <div class="testimonial-title">
-          <h1>來自我們可愛的客戶的評論</h1>
+          <h1>來自我們可愛客戶的評論</h1>
           <p>Review from our lovely clients</p>
         </div>
         <div class="slider-content">
