--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                   <i class="fa fa-star"></i>
                   <i class="fa fa-star"></i>
                   <i class="fa fa-star"></i>
-                  <i class="fa fa-star-o"></i>
+                  <i class="fa fa-star"></i>
                 </div>
                 <p class="testimonial-description">
                   “ We are especially grateful for your family’s hospitality and
@@ -261,7 +261,7 @@
                   <i class="fa fa-star"></i>
                   <i class="fa fa-star"></i>
                   <i class="fa fa-star"></i>
-                  <i class="fa fa-star-o"></i>
+                  <i class="fa fa-star"></i>
                 </div>
                 <p class="testimonial-description">
                   “ Time flies and it is hard to believe it is time to say
@@ -287,7 +287,7 @@
                   <i class="fa fa-star"></i>
                   <i class="fa fa-star"></i>
                   <i class="fa fa-star"></i>
-                  <i class="fa fa-star-o"></i>
+                  <i class="fa fa-star"></i>
                 </div>
                 <p class="testimonial-description">
                   第一次看到你們然後訂閱你們就是因為吉爾吉斯，一個我以前只在地理課認識到的國家，如果沒有看到你們的影片，可能就真的錯過目睹人間淨土的機會了。
@@ -309,7 +309,7 @@
                   <i class="fa fa-star"></i>
                   <i class="fa fa-star"></i>
                   <i class="fa fa-star"></i>
-                  <i class="fa fa-star-o"></i>
+                  <i class="fa fa-star"></i>
                 </div>
                 <p class="testimonial-description">
                   “ Thank you Ruby by introducing Navat n Tendik to us! We had
