--- a/seven-days-tour.html
+++ b/seven-days-tour.html
@@ -552,15 +552,14 @@
                 <div class="about-tour-col">
                   <div class="about-tour-col-info">
                     <p>
-                      Having enjoyed breakfast you will be transferred to the
-                      sparkling, crystal clear mountain lake Song-Kol through
-                      Kochkor village. In the village, you can visit a local
-                      family for lunch and participate in a workshop to make the
-                      traditional handmade felt carpets. It is worth a try!
-                      After lunch we continue the journey to Song-Kol, crossing
-                      the high pass Kalmak-Ashuu (3400m). The pass takes us to
-                      the northern lakeshore where you will be welcomed in a
-                      yurt camp. You will dine and sleep in the yurt camp
+                      Morning to noon: You will have time to enjoy the stunning
+                      view of Song Kol Lake and take a leisurely walk along one
+                      of the highest alpine lakes in Kyrgyzstan. After lunch, we
+                      will embark on a scenic drive to Chon Kemin Gorge, passing
+                      through Kalmak Pass. The journey is expected to take
+                      around 3 hours. Our guest house in Chon Kemin is nestled
+                      next to the mountains, and we anticipate arriving in the
+                      early evening. Dinner will be served in the guest house.
                     </p>
                     <div class="overnight">
                       <i class="fa fa-home"></i>
@@ -600,9 +599,8 @@
                       transfer to Bishkek. On the way, you'll visit the Burana
                       Tower architectural complex, which dates back to the 10th
                       and 11th centuries and played a significant role on the
-                      Great Silk Road. The complex is situated 15 km from the
-                      main road. Lunch will be served at the Dunghan family
-                      house. From there, you will be transported back to
+                      Great Silk Road. Lunch will be served at the Dunghan
+                      family house. From there, you will be transported back to
                       Bishkek, where you'll have some free time to explore. In
                       the evening, a farewell dinner at a local restaurant will
                       be awaiting you.
