--- a/kyrgyzs-hospitality.html
+++ b/kyrgyzs-hospitality.html
@@ -75,7 +75,7 @@
         <h1>Experience Kyrgyz Local Hospitality</h1>
         <div class="gallery">
           <a class="box a" href="hospitality/mom-and-guests.png">
-            <button class="photo-collage-all">View all 9 images</button>
+            <button class="photo-collage-all"></button>
             <img
               class="first-photo"
               src="hospitality/mom-and-guests.png"
@@ -101,38 +101,6 @@
 
           <a class="box d" href="hospitality/dymdama.jpg">
             <img class="second-photo" src="hospitality/dymdama.jpg" alt="" />
-          </a>
-
-          <a class="box d" href="hospitality/mom-besh-barmak.jpg">
-            <img
-              class="third-photo"
-              src="hospitality/mom-besh-barmak.jpg"
-              alt=""
-            />
-          </a>
-
-          <a class="box d" href="hospitality/winter-quurdak.jpg">
-            <img
-              class="third-photo"
-              src="hospitality/winter-quurdak.jpg"
-              alt=""
-            />
-          </a>
-
-          <a class="box d" href="hospitality/watermelon.jpg">
-            <img class="third-photo" src="hospitality/watermelon.jpg" alt="" />
-          </a>
-
-          <a class="box d" href="hospitality/nan.jpg">
-            <img class="third-photo" src="hospitality/nan.jpg" alt="" />
-          </a>
-
-          <a class="box d" href="hospitality/winter-tourist.jpg">
-            <img
-              class="third-photo"
-              src="hospitality/winter-tourist.jpg"
-              alt=""
-            />
           </a>
         </div>
 
