--- a/kyrgyzs-hospitality.html
+++ b/kyrgyzs-hospitality.html
@@ -177,7 +177,7 @@
               <p></p>
             </div>
             <div class="hos-item-btn">
-              <p>Book or any Qiestion ?</p>
+              <p>Book or any Question ?</p>
               <a class="item-hero-btn" href="contact.html"
                 ><span>Contuct Us!</span></a
               >
