--- a/seven-days-tour.html
+++ b/seven-days-tour.html
@@ -184,7 +184,7 @@
               <p>per person</p>
             </div>
             <div class="info-item-btn">
-              <p>Book or any Qiestion ?</p>
+              <p>Book or any Question ?</p>
               <a class="item-hero-btn" href="contact.html"
                 ><span>Contuct Us!</span></a
               >
