--- a/about-us.html
+++ b/about-us.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bek & Ruby</title>
+    <title>我們的故事 - About Us</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="about-us.css" />
     <link
@@ -50,7 +50,7 @@
         </div>
         <i class="fa fa-bars" onclick="showMenu()"></i>
       </nav>
-      <h1>Our Story</h1>
+      <h1>我們的故事</h1>
     </section>
 
     <!---------- About us story ----------->
