--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>copy 3</title>
+    <title>聯絡我們 - Contact</title>
     <link rel="stylesheet" href="css.main/main.css" />
     <link rel="stylesheet" href="css.main/receive-contact-form.css" />
     <link
@@ -61,7 +61,7 @@
         </div>
         <i class="fa fa-bars" onclick="showMenu()"></i>
       </nav>
-      <h1>Stay With Us</h1>
+      <h1>聯絡我們</h1>
     </section>
 
     <section class="contact-section">
