--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bek Ruby</title>
+    <title>跟著我們探索吉爾吉斯</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="blog.css" />
 
@@ -130,13 +130,13 @@
             </div>
           </a>
 
-          <a href="eight-days-tour.html">
+          <a href="kyrgyzs-hospitality.html">
             <div class="tour-col">
-              <img src="images/autmn-tours.jpg" alt="" />
-              <h4>8天秋 客製化行程</h4>
+              <img src="images/cooking-oneday-tour.jpg" alt="" />
+              <h4>體驗當地美食</h4>
               <div class="tour-days">
                 <i class="fa fa-location-arrow"></i>
-                <p>8 Days Trip</p>
+                <p>1 Days Trip</p>
                 <div class="testimonial-starts-tour">
                   <i class="fa fa-star"></i>
                   <i class="fa fa-star"></i>
@@ -148,13 +148,13 @@
             </div>
           </a>
 
-          <a href="kyrgyzs-hospitality.html">
+          <a href="eight-days-tour.html">
             <div class="tour-col">
-              <img src="images/cooking-oneday-tour.jpg" alt="" />
-              <h4>體驗當地美食</h4>
+              <img src="images/autmn-tours.jpg" alt="" />
+              <h4>8天秋 客製化行程</h4>
               <div class="tour-days">
                 <i class="fa fa-location-arrow"></i>
-                <p>1 Days Trip</p>
+                <p>8 Days Trip</p>
                 <div class="testimonial-starts-tour">
                   <i class="fa fa-star"></i>
                   <i class="fa fa-star"></i>
