--- a/kyrgyzs-hospitality.html
+++ b/kyrgyzs-hospitality.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>copy 3</title>
+    <title>體驗當地美食 - Local Hospitality</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="8-days-tour.css" />
     <link rel="stylesheet" href="kyrgyzs-hospitality.css" />
