--- a/tours.html
+++ b/tours.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bek & Ruby</title>
+    <title>吉爾吉斯旅遊 - Tours</title>
     <link rel="stylesheet" href="style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700&display=swap"
@@ -49,7 +49,7 @@
         </div>
         <i class="fa fa-bars" onclick="showMenu()"></i>
       </nav>
-      <h1>留下難忘的時刻</h1>
+      <h1>吉爾吉斯經典行程</h1>
     </section>
 
     <!---------- Tour ----------->
@@ -83,13 +83,13 @@
             </div>
           </a>
 
-          <a href="eight-days-tour.html">
+          <a href="kyrgyzs-hospitality.html">
             <div class="tour-col">
-              <img src="images/autmn-tours.jpg" alt="" />
-              <h4>8天秋 客製化行程</h4>
+              <img src="images/cooking-oneday-tour.jpg" alt="" />
+              <h4>體驗當地美食</h4>
               <div class="tour-days">
                 <i class="fa fa-location-arrow"></i>
-                <p>8 Days Trip</p>
+                <p>1 Days Trip</p>
                 <div class="testimonial-starts-tour">
                   <i class="fa fa-star"></i>
                   <i class="fa fa-star"></i>
@@ -101,13 +101,13 @@
             </div>
           </a>
 
-          <a href="kyrgyzs-hospitality.html">
+          <a href="eight-days-tour.html">
             <div class="tour-col">
-              <img src="images/cooking-oneday-tour.jpg" alt="" />
-              <h4>體驗當地美食</h4>
+              <img src="images/autmn-tours.jpg" alt="" />
+              <h4>8天秋 客製化行程</h4>
               <div class="tour-days">
                 <i class="fa fa-location-arrow"></i>
-                <p>1 Days Trip</p>
+                <p>8 Days Trip</p>
                 <div class="testimonial-starts-tour">
                   <i class="fa fa-star"></i>
                   <i class="fa fa-star"></i>
