--- a/visa.html
+++ b/visa.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bek & Ruby</title>
+    <title>簽證問題 - Visa</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="about-us.css" />
     <link rel="stylesheet" href="visa.css" />
@@ -48,7 +48,7 @@
         </div>
         <i class="fa fa-bars" onclick="showMenu()"></i>
       </nav>
-      <h1>Kyrgyzstan visa</h1>
+      <h1>吉爾吉斯簽證</h1>
     </section>
 
     <!---------- Visa ----------->
