--- a/blog-article.html
+++ b/blog-article.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bek & Ruby</title>
+    <title>來吉爾吉斯 一定要體驗的五件事 - Blog</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="about-us.css" />
     <link rel="stylesheet" href="visa.css" />
