--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bek & Ruby</title>
+    <title>最新文章 - Blog</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="blog.css" />
     <link
