--- a/eight-days-tour.html
+++ b/eight-days-tour.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bek & Ruby/ blog</title>
+    <title>8天秋 客製化行程</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="8-days-tour.css" />
     <link
