--- a/question-answers.html
+++ b/question-answers.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bek & Ruby</title>
+    <title>常見的問題 - Q&A</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="question-answers.css" />
 
@@ -48,7 +48,7 @@
         </div>
         <i class="fa fa-bars" onclick="showMenu()"></i>
       </nav>
-      <h1>Most Asked Questions</h1>
+      <h1>常見的問題</h1>
     </section>
 
     <!---------- Q & A ----------->
