--- a/seven-days-tour.html
+++ b/seven-days-tour.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>7-day-tours</title>
+    <title>7 天夏 經典行程 - 7 day tours</title>
     <link rel="stylesheet" href="css.main/main.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700&display=swap"
